Automatically generate exports for [Component] classes

--- a/packages.config
+++ b/packages.config
@@ -1,7 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
 	<package id="GitInfo" version="1.0.56-pre" targetFramework="net45" />
+	<package id="GitLink" version="2.2.0" targetFramework="net45" />
 	<package id="xunit.runner.msbuild" version="2.1.0" targetFramework="net45" />
 	<package id="xunit.runner.console" version="2.1.0" targetFramework="net45" />
 	<package id="MSBuilder.CodeTaskAssembly" version="0.2.2" targetFramework="net45" />
+	<package id="MSBuilder.DumpItems" version="0.1.7" targetFramework="net45" />
+	<package id="MSBuilder.VsixInstaller" version="0.1.9" targetFramework="net45" />
+	<package id="MSBuilder.IsAdministrator" version="0.1.0" targetFramework="net45" />
+	<package id="NuProj" version="0.11.14-beta" targetFramework="net45" />
 </packages>
