--- a/src/Clide.UnitTests/Clide.UnitTests.csproj
+++ b/src/Clide.UnitTests/Clide.UnitTests.csproj
@@ -10,6 +10,7 @@
     <RootNamespace>Clide</RootNamespace>
     <AssemblyName>Clide.UnitTests</AssemblyName>
     <Optimize>false</Optimize>
+    <GenerateExports>true</GenerateExports>
   </PropertyGroup>
   <Import Project="..\Clide.props" />
   <PropertyGroup>
@@ -68,4 +69,8 @@
     <None Include="project.json" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\Clide.Tasks\bin\Clide.targets" Condition="Exists('..\Clide.Tasks\bin\Clide.targets')" />
+  <Target Name="Validate" Condition=" '$(GenerateExports)' == 'true' ">
+    <Error Text="Build the Clide.Tasks.sln solution before building Clide.sln" Condition="!Exists('..\Clide.Tasks\bin\Clide.targets')" />
+  </Target>
 </Project>
