Fallback UniqueName to project full name if it fails
This is consistent with the way C# and VB project systems provide their
UniqueName, but we keep the DTE property retrieval in case other project
systems do it differently.

--- a/src/Clide/Clide.csproj
+++ b/src/Clide/Clide.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Extensions\System\Collections\Generic\IEnumerable\Traverser.cs" />
     <Compile Include="Extensions\System\TypeInheritance.cs" />
     <Compile Include="Extensions\System\TypeInheritanceExtension.cs" />
+    <Compile Include="Extensions\VisualStudio\DteExtensions.cs" />
     <Compile Include="Extensions\VisualStudio\IVsHierarchyItemExtensions.cs" />
     <Compile Include="Extensions\VisualStudio\IVsSolutionExtensions.cs" />
     <Compile Include="Interop\BooleanSymbolExpressionEvaluator.cs" />
