--- a/appveyor.yml
+++ b/appveyor.yml
@@ -4,7 +4,10 @@ init:
   - git config --global core.autocrlf input
 
 build_script:
-  - build.cmd "/t:build,unittest,package" /logger:"C:\Program Files\AppVeyor\BuildAgent\Appveyor.MSBuildLogger.dll" "/v:diag"
+  - cmd: >-
+      msbuild build.proj /t:configure /p:target=configure /v:quiet &&
+      msbuild build.proj /t:build /v:diag &&
+      msbuild build.proj /t:unittest,package /v:minimal
 
 # we run the tests ourselves
 test: off
