Update GitInfo, ignore unnecessary warning

--- a/src/Clide.props
+++ b/src/Clide.props
@@ -25,6 +25,7 @@
 		<DefineConstants>TRACE</DefineConstants>
 		<ErrorReport>prompt</ErrorReport>
 		<WarningLevel>4</WarningLevel>
+		<NoWarn>1701;1702</NoWarn>
 
 		<GitIgnoreTagVersion>true</GitIgnoreTagVersion>
 		<GitIgnoreBranchVersion>true</GitIgnoreBranchVersion>
