--- a/src/Clide/Clide.csproj
+++ b/src/Clide/Clide.csproj
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" InitialTargets="Validate" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
   <PropertyGroup>
     <ProjectGuid>{E8FABF5D-2FC8-43F6-B866-E3349AFB7538}</ProjectGuid>
@@ -126,7 +126,7 @@
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\Clide.targets" />
   <Import Project="..\Clide.Tasks\bin\Clide.targets" Condition="Exists('..\Clide.Tasks\bin\Clide.targets')" />
-  <Target Name="Validate" Condition=" '$(GenerateExports)' == 'true' ">
+  <Target Name="Validate" BeforeTargets="CoreCompile" Condition=" '$(GenerateExports)' == 'true' ">
     <Error Text="Build the Clide.Tasks.sln solution before building Clide.sln" Condition="!Exists('..\Clide.Tasks\bin\Clide.targets')" />
   </Target>
 </Project>
