--- a/src/Clide.nuspec
+++ b/src/Clide.nuspec
@@ -6,7 +6,7 @@
     <title>Clide: An Enjoyable IDE Automation API</title>
     <authors>Daniel Cazzulino</authors>
     <owners>Daniel Cazzulino</owners>
-    <licenseUrl>https://github.com/clariuslabs/clide/License.txt</licenseUrl>
+    <licenseUrl>https://raw.githubusercontent.com/clariuslabs/clide/v2/LICENSE</licenseUrl>
     <projectUrl>https://github.com/clariuslabs/clide/</projectUrl>
     <iconUrl>https://raw.github.com/clariuslabs/clide/master/img/Clide32x32.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
