--- a/src/Clide.Interfaces/project.json
+++ b/src/Clide.Interfaces/project.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "GitInfo": "1.1.32",
     "IFluentInterface": "2.0.3",
-    "Merq.Async": "1.0.30-pre",
+    "Merq.Async": "1.0.1-alpha",
     "netfx-System.StringResources": "3.0.13",
     "Rx-Interfaces": "2.2.5",
     "VSSDK.ComponentModelHost.11": "11.0.4",
