--- a/src/Clide.Vsix/project.json
+++ b/src/Clide.Vsix/project.json
@@ -4,7 +4,7 @@
     "GitInfo": "1.1.32",
     "IFluentInterface": "2.0.3",
     "Merq": "1.0.30-pre",
-    "Merq.Async": "1.0.30-pre",
+    "Merq.Async": "1.0.1-alpha",
     "Microsoft.VisualStudio.SDK.VsixSuppression": "14.1.25",
     "netfx-System.StringResources": "3.0.13",
     "Rx-Main": "2.2.5",
