--- a/src/Clide/project.json
+++ b/src/Clide/project.json
@@ -3,7 +3,7 @@
     "GitInfo": "1.1.32",
     "IFluentInterface": "2.0.3",
     "Merq": "1.0.30-pre",
-    "Merq.Async": "1.0.30-pre",
+    "Merq.Async": "1.0.1-alpha",
     "Microsoft.VisualStudio.Threading": "12.2.0",
     "netfx-System.StringResources": "3.0.13",
     "Rx-Main": "2.2.5",
