--- a/src/Installers/SampleExtension/packages.config
+++ b/src/Installers/SampleExtension/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Merq.Installer" version="1.0.30-pre" targetFramework="net452" />
+  <package id="Merq.Async" version="1.0.1-alpha" targetFramework="net452" />
   <package id="MSBuilder" version="0.1.0" targetFramework="net452" />
   <package id="MSBuilder.CodeTaskAssembly" version="0.2.3" targetFramework="net452" />
   <package id="MSBuilder.IsXBuild" version="0.1.0" targetFramework="net452" />
