Dump MEF log when VS is started with /log switch
This makes it far easier to diagnose composition errors.

When launching with `devenv /log`, upon constructing the MEF container
for a DevEnv for a given package/service provider, a Clide.[PACKAGEGUID].log
will be written to %LocalAppData%\Microsoft\VisualStudio\[VSVERSION][HIVE]\ComponentModelCache.

--- a/src/Clide.nuspec
+++ b/src/Clide.nuspec
@@ -101,6 +101,7 @@ v1.0
     <file src="Clide\bin\$configuration$\Clide.dll" target="lib\net45" />
     <file src="Clide\bin\$configuration$\Clide.pdb" target="lib\net45" />
     <file src="Clide\bin\$configuration$\Clide.xml" target="lib\net45" />
+    <file src="Clide\bin\$configuration$\Microsoft.ComponentModel.Composition.Diagnostics.dll" target="lib\net45" />
     <file src="Clide\bin\$configuration$\GitInfo.txt" target="src\" />
     <file src="Clide.Standalone.sln" target="src\Clide.sln" />
     <file src="Clide.props" target="src\" />
