--- a/src/Clide.IntegrationTests/Clide.IntegrationTests.csproj
+++ b/src/Clide.IntegrationTests/Clide.IntegrationTests.csproj
@@ -1,113 +1,27 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D9C83C1F-7249-4B67-8ADE-0A1AA21F738B}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Clide</RootNamespace>
-    <AssemblyName>Clide.IntegrationTests</AssemblyName>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-    <PlatformTarget>x86</PlatformTarget>
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-    <TargetFrameworkProfile />
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DefineConstants>$(DefineConstants);DEBUG</DefineConstants>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-  </PropertyGroup>
-  <Import Project="..\Clide.props" />
-  <PropertyGroup>
-    <DocumentationFile />
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFramework>net461</TargetFramework>
+    <IncludeVSSDK>true</IncludeVSSDK>
+    <IncludeIntegrationTests>true</IncludeIntegrationTests>
+    <EnableDefaultItems>false</EnableDefaultItems>
+    <AddSyntheticProjectReferencesForSolutionDependencies>false</AddSyntheticProjectReferencesForSolutionDependencies>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Microsoft.VisualStudio.ExtensibilityHosting, Version=14.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>$(PrivateAssemblies)Microsoft.VisualStudio.ExtensibilityHosting.dll</HintPath>
-    </Reference>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
     <Reference Include="System.ComponentModel.Composition" />
-    <Reference Include="System.Design" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Transactions" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="UIAutomationTypes" />
+    <Reference Include="Microsoft.Build" />
+    <Reference Include="Microsoft.CSharp" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Core" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Adapters\DteAdapterFacadeSpec.cs" />
-    <Compile Include="Adapters\DteToVsAdapterSpec.cs" />
-    <Compile Include="Adapters\SolutionAdapterFacadeSpec.cs" />
-    <Compile Include="Adapters\SolutionToVsAdapterSpec.cs" />
-    <Compile Include="Adapters\SolutionToVsLangAdapterSpec.cs" />
-    <Compile Include="AsyncManagerSpec.cs" />
-    <Compile Include="GlobalServiceLocator.cs" />
-    <Compile Include="Constants.cs" />
-    <Compile Include="Extensions.cs" />
-    <Compile Include="FixtureState\ISolutionFixture.cs" />
-    <Compile Include="FixtureState\SolutionFixtures.cs" />
-    <Compile Include="FixtureState\SolutionFixture.cs" />
-    <Compile Include="Interop\VsHierarchySelectionSpec.cs" />
-    <Compile Include="Interop\VsSolutionSelectionSpec.cs" />
-    <Compile Include="Misc.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Retry.cs" />
-    <Compile Include="ServiceLocatorExtensionsSpec.cs" />
-    <Compile Include="Solution\SharedProjectSpec.cs" />
-    <Compile Include="Solution\SolutionExplorerNodeSpec.cs" />
-    <Compile Include="Solution\SolutionItemNodeFactorySpec.cs" />
-    <Compile Include="Solution\SolutionFolderNodeFactorySpec.cs" />
-    <Compile Include="Solution\ReferencesNodeFactorySpec.cs" />
-    <Compile Include="Solution\ReferenceNodeFactorySpec.cs" />
-    <Compile Include="Solution\FolderNodeFactorySpec.cs" />
-    <Compile Include="Solution\NodeFactorySpec.cs" />
-    <Compile Include="Solution\ItemNodeFactorySpec.cs" />
-    <Compile Include="Solution\SolutionExplorerSpec.cs" />
-    <Compile Include="Solution\ProjectNodeFactorySpec.cs" />
-    <Compile Include="Solution\SolutionSpec.cs" />
-    <Compile Include="Solution\SolutionNodeSpec.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Clide.Extensibility\Clide.Extensibility.csproj">
-      <Project>{09ac21f4-4e72-4942-afac-20b9ef325a50}</Project>
-      <Name>Clide.Extensibility</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Clide.Interfaces\Clide.Interfaces.csproj">
-      <Project>{099bebd8-6b04-416d-ba44-e0201951542b}</Project>
-      <Name>Clide.Interfaces</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Clide.Vsix\Clide.Vsix.csproj">
-      <Project>{c9a505ca-f826-473a-8290-b36af6be56fb}</Project>
-      <Name>Clide.Vsix</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Clide\Clide.csproj">
-      <Project>{e8fabf5d-2fc8-43f6-b866-e3349afb7538}</Project>
-      <Name>Clide</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="Clide.IntegrationTests.targets" />
-    <None Include="project.json" />
+    <Compile Include="**\*.cs" Exclude="Content\**;bin\**;obj\**" />
     <None Include="xunit.runner.json" />
+    <Content Include="Content\**\*.*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
+    <ProjectReference Include="..\Clide.Extensibility\Clide.Extensibility.csproj" />
+    <ProjectReference Include="..\Clide.Interfaces\Clide.Interfaces.csproj" />
+    <ProjectReference Include="..\Clide\Clide.csproj" />
   </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="Clide.IntegrationTests.targets" />
 </Project>
