--- a/src/Clide.UnitTests/Clide.UnitTests.csproj
+++ b/src/Clide.UnitTests/Clide.UnitTests.csproj
@@ -1,76 +1,18 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{196C432A-F34C-44E4-AAA1-E0A43DB8949C}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Clide</RootNamespace>
-    <AssemblyName>Clide.UnitTests</AssemblyName>
-    <Optimize>false</Optimize>
-    <GenerateExports>true</GenerateExports>
-  </PropertyGroup>
-  <Import Project="..\Clide.props" />
-  <PropertyGroup>
-    <DocumentationFile />
+    <TargetFramework>net461</TargetFramework>
+    <IncludeTests>true</IncludeTests>
+    <IncludeVSSDK>true</IncludeVSSDK>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationCore" />
-    <Reference Include="PresentationFramework" />
-    <Reference Include="System" />
     <Reference Include="System.ComponentModel.Composition" />
-    <Reference Include="System.Core" />
+    <Reference Include="Microsoft.Build" />
     <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System.Design" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Transactions" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="System.Xml" />
-    <Reference Include="System.Xml.Linq" />
-    <Reference Include="UIAutomationTypes" />
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CompositionSpec.cs" />
-    <Compile Include="Events\ShellInitializedObservableSpec.cs" />
-    <Compile Include="Extensions\ServiceProviderExtensionsSpec.cs" />
-    <Compile Include="Extensions\StringExtensionsSpec.cs" />
-    <Compile Include="Extensions\ServiceLocatorExtensionsSpec.cs" />
-    <Compile Include="FakeSolutionExplorer.cs" />
-    <Compile Include="Extensions\SolutionNodeExtensionsSpec.cs" />
-    <Compile Include="ReactiveSpec.cs" />
-    <Compile Include="ServiceLocatorSpec.cs" />
-    <Compile Include="StaFact.cs" />
-    <Compile Include="GuardSpec.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestContainer.cs" />
+    <ProjectReference Include="..\Clide.Extensibility\Clide.Extensibility.csproj" />
+    <ProjectReference Include="..\Clide.Interfaces\Clide.Interfaces.csproj" />
+    <ProjectReference Include="..\Clide\Clide.csproj" />
   </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Clide.Extensibility\Clide.Extensibility.csproj">
-      <Project>{09ac21f4-4e72-4942-afac-20b9ef325a50}</Project>
-      <Name>Clide.Extensibility</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Clide.Interfaces\Clide.Interfaces.csproj">
-      <Project>{099bebd8-6b04-416d-ba44-e0201951542b}</Project>
-      <Name>Clide.Interfaces</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Clide\Clide.csproj">
-      <Project>{e8fabf5d-2fc8-43f6-b866-e3349afb7538}</Project>
-      <Name>Clide</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="project.json" />
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-  <Import Project="..\Clide.Tasks\bin\Clide.targets" Condition="Exists('..\Clide.Tasks\bin\Clide.targets')" />
-  <Target Name="Validate" Condition=" '$(GenerateExports)' == 'true' ">
-    <Error Text="Build the Clide.Tasks.sln solution before building Clide.sln" Condition="!Exists('..\Clide.Tasks\bin\Clide.targets')" />
-  </Target>
 </Project>
