Allow overriding Xamarin.VSSDK and xunit.vsix packages with sources
Add a PackageOverrides.user alongside the targets with content like:

```xml
<Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
  <PropertyGroup>
    <XVSSDK>..\..\..\..\Xamarin.VSSDK</XVSSDK>
    <XunitVsix>..\..\..\..\xunit.vsix</XunitVsix>
    <MSBuildAllProjects>$(MSBuildAllProjects);$(MSBuildThisFileFullPath)</MSBuildAllProjects>
  </PropertyGroup>
</Project>
```

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -2,6 +2,7 @@
 
 	<PropertyGroup>
 		<CI Condition="'$(CI)' == '' and '$(TF_BUILD)' == 'true'">true</CI>
+		
 		<DebugSymbols>true</DebugSymbols>
 		<DebugType>full</DebugType>
 		<RootNamespace>Clide</RootNamespace>
@@ -21,6 +22,11 @@
 
 		<SignAssembly>true</SignAssembly>
 		<AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)ClariusLabs.snk</AssemblyOriginatorKeyFile>
+		
+		<!-- Early "evaluation" for Xamarin.VSSDK sources overriding -->
+		<IncludeVSSDK>$([System.Text.RegularExpressions.Regex]::IsMatch($([System.IO.File]::ReadAllText($(MSBuildProjectFullPath))), '&lt;IncludeVSSDK&gt;true&lt;/IncludeVSSDK&gt;'))</IncludeVSSDK>
+		<IncludeVSSDKTools>$([System.Text.RegularExpressions.Regex]::IsMatch($([System.IO.File]::ReadAllText($(MSBuildProjectFullPath))), '&lt;IncludeVSSDKTools&gt;true&lt;/IncludeVSSDKTools&gt;'))</IncludeVSSDKTools>
 	</PropertyGroup>
 
+	<Import Project="PackageOverrides.props" Condition="'$(IncludeVSSDK)' == 'true' or '$(IncludeVSSDKTools)' == 'true'" />
 </Project>
