--- a/src/Clide/Clide.csproj
+++ b/src/Clide/Clide.csproj
@@ -6,6 +6,9 @@
     <IncludeRx>true</IncludeRx>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.SDK.EmbedInteropTypes" Version="14.1.7" />
+  </ItemGroup>
+  <ItemGroup>
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="Microsoft.Build" />
     <Reference Include="Microsoft.CSharp" />
