--- a/src/Clide.IntegrationTests/Clide.IntegrationTests.csproj
+++ b/src/Clide.IntegrationTests/Clide.IntegrationTests.csproj
@@ -6,6 +6,12 @@
     <EnableDefaultItems>false</EnableDefaultItems>
     <AddSyntheticProjectReferencesForSolutionDependencies>false</AddSyntheticProjectReferencesForSolutionDependencies>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+    <CodeAnalysisRuleSet>Clide.IntegrationTests.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <CodeAnalysisRuleSet>Clide.IntegrationTests.ruleset</CodeAnalysisRuleSet>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System.ComponentModel.Composition" />
     <Reference Include="Microsoft.Build" />
@@ -14,6 +20,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="**\*.cs" Exclude="Content\**;bin\**;obj\**" />
+    <None Include="Clide.IntegrationTests.ruleset" />
     <None Include="xunit.runner.json" />
     <Content Include="Content\**\*.*">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
