--- a/src/Directory.Build.targets
+++ b/src/Directory.Build.targets
@@ -25,15 +25,15 @@
 		<PackageReference Include="System.Reactive.Interfaces" Version="3.0.0" />
 		<PackageReference Include="IFluentInterface" Version="2.0.3" />
 		<PackageReference Include="netfx-System.StringResources" Version="*" />
-		<PackageReference Include="System.Diagnostics.Tracer" Version="*" />	
+		<PackageReference Include="System.Diagnostics.Tracer" Version="*" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(IncludeVSSDK)' == 'true' and '$(XVSSDK)' == ''">
-		<PackageReference Include="Xamarin.VSSDK" Version="0.2.1-alpha-build0013" />
+		<PackageReference Include="Xamarin.VSSDK" Version="0.3.0-alpha.*" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(IncludeVSSDKTools)' == 'true' and '$(XVSSDK)' == ''">
-		<PackageReference Include="Xamarin.VSSDK.BuildTools" Version="0.2.1-alpha-build0013" />
+		<PackageReference Include="Xamarin.VSSDK.BuildTools" Version="0.3.0-alpha.*" />
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(IncludeRx)' == 'true'">
@@ -49,7 +49,7 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(IncludeIntegrationTests)' == 'true' and '$(XunitVsix)' == ''">
-		<PackageReference Include="xunit.vsix" Version="0.3.12-beta" />
+		<PackageReference Include="xunit.vsix" Version="0.4.0-alpha.*" />
 	</ItemGroup>
 
 	<Target Name="GetProductVersions" DependsOnTargets="GitVersion">
