--- a/src/NuGet.Config
+++ b/src/NuGet.Config
@@ -1,10 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-	<packageSources>
-		<add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
-		<add key="msbuilder" value="https://ci.appveyor.com/nuget/msbuilder" />
-		<add key="xunit.vsix" value="https://ci.appveyor.com/nuget/xunit-vsix" />
-	</packageSources>
+  <packageSources>
+    <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
+    <add key="msbuilder" value="https://ci.appveyor.com/nuget/msbuilder" />
+    <add key="kzu" value="https://kzu.blob.core.windows.net/nuget/index.json" />
+    <add key="local" value="%TEMP%\packages" />
+  </packageSources>
   <disabledPackageSources>
     <clear />
   </disabledPackageSources>
