--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -2,7 +2,7 @@
 
 	<PropertyGroup>
 		<CI Condition="'$(CI)' == '' and '$(TF_BUILD)' == 'true'">true</CI>
-		
+
 		<DebugSymbols>true</DebugSymbols>
 		<DebugType>full</DebugType>
 		<RootNamespace>Clide</RootNamespace>
@@ -10,9 +10,8 @@
 		<!-- Triggers generation of a [VSIXID].json file alongside the VSIX, used by Willow installer -->
 		<IsProductComponent>true</IsProductComponent>
 		<ExtensionInstallationRoot>Extensions</ExtensionInstallationRoot>
+		<ExtensionInstallationFolder>Clide</ExtensionInstallationFolder>
 
-		<GitCommitsRelativeTo>$([MSBuild]::GetDirectoryNameOfFileAbove ('$(MSBuildThisFileDirectory)', 'build.proj'))</GitCommitsRelativeTo>
-		<GitVersionFile Condition="'$(GitVersionFile)' == ''">GitInfo.txt</GitVersionFile>
 		<GitIgnoreBranchVersion>true</GitIgnoreBranchVersion>
 		<GitIgnoreTagVersion>true</GitIgnoreTagVersion>
 
@@ -22,11 +21,10 @@
 
 		<SignAssembly>true</SignAssembly>
 		<AssemblyOriginatorKeyFile>$(MSBuildThisFileDirectory)ClariusLabs.snk</AssemblyOriginatorKeyFile>
-		
-		<!-- Early "evaluation" for Xamarin.VSSDK sources overriding -->
-		<IncludeVSSDK>$([System.Text.RegularExpressions.Regex]::IsMatch($([System.IO.File]::ReadAllText($(MSBuildProjectFullPath))), '&lt;IncludeVSSDK&gt;true&lt;/IncludeVSSDK&gt;'))</IncludeVSSDK>
-		<IncludeVSSDKTools>$([System.Text.RegularExpressions.Regex]::IsMatch($([System.IO.File]::ReadAllText($(MSBuildProjectFullPath))), '&lt;IncludeVSSDKTools&gt;true&lt;/IncludeVSSDKTools&gt;'))</IncludeVSSDKTools>
+
+		<ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>None</ResolveAssemblyWarnOrErrorOnTargetArchitectureMismatch>
+		<ResolveAssemblyReferencesSilent>true</ResolveAssemblyReferencesSilent>
+		<NoWarn>$(NoWarn);0436</NoWarn>
 	</PropertyGroup>
 
-	<Import Project="PackageOverrides.props" Condition="'$(IncludeVSSDK)' == 'true' or '$(IncludeVSSDKTools)' == 'true'" />
 </Project>
