Include XVSSDK like the other projects

--- a/src/Clide.Interfaces/Clide.Interfaces.csproj
+++ b/src/Clide.Interfaces/Clide.Interfaces.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net461</TargetFramework>
+    <IncludeVSSDK>true</IncludeVSSDK>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System.ComponentModel.Composition" />
@@ -12,9 +13,6 @@
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Xamarin.VSSDK" Version="0.2.1-alpha-build0012" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
