Fix broken unit tests

--- a/src/NuGet.Config
+++ b/src/NuGet.Config
@@ -3,6 +3,7 @@
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="msbuilder" value="https://ci.appveyor.com/nuget/msbuilder" />
+    <add key="gitinfo" value="https://ci.appveyor.com/nuget/gitinfo" />
     <add key="kzu" value="https://kzu.blob.core.windows.net/nuget/index.json" />
     <add key="local" value="%TEMP%\packages" />
   </packageSources>
