--- a/src/Clide.Vsix/Clide.Vsix.csproj
+++ b/src/Clide.Vsix/Clide.Vsix.csproj
@@ -8,8 +8,7 @@
     <None Include="source.extension.vsixmanifest" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Clide\Clide.csproj">
-    </ProjectReference>
+    <ProjectReference Include="..\Clide\Clide.csproj" />
     <ProjectReference Include="..\Clide.Interfaces\Clide.Interfaces.csproj" />
     <ProjectReference Include="..\Clide.Extensibility\Clide.Extensibility.csproj" />
   </ItemGroup>
