--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,13 +1,13 @@
-os: Visual Studio 2015
+os: Visual Studio 2017
 
 init:
   - git config --global core.autocrlf input
 
 build_script:
   - cmd: >-
-      msbuild build.proj /t:configure /p:target=configure /v:quiet &&
-      msbuild build.proj /t:build /v:normal &&
-      msbuild build.proj /t:unittest,package /v:minimal
+      msbuild build.proj /t:restore /p:dev=14.0 &&
+      msbuild build.proj /t:build /p:dev=14.0 &&
+      msbuild build.proj /t:package /p:dev=14.0 /v:minimal
 
 # we run the tests ourselves
 test: off
