Point directly to xunit.vsix and xvssdk CI feeds too
This adds resilience to the build by providing a fallback to nuget.org

--- a/src/NuGet.Config
+++ b/src/NuGet.Config
@@ -4,7 +4,8 @@
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="msbuilder" value="https://ci.appveyor.com/nuget/msbuilder" />
     <add key="gitinfo" value="https://ci.appveyor.com/nuget/gitinfo" />
-    <add key="kzu" value="https://kzu.blob.core.windows.net/nuget/index.json" />
+    <add key="xunit.vsix" value="https://nuget.azureedge.net/xunit/index.json" />
+    <add key="xvssdk" value="https://nuget.azureedge.net/xvssdk/index.json" />
     <add key="local" value="%TEMP%\packages" />
   </packageSources>
   <disabledPackageSources>
