Setting IsProductComponent=false for now

--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -6,7 +6,7 @@
 		<RootNamespace>Clide</RootNamespace>
 
 		<!-- Triggers generation of a [VSIXID].json file alongside the VSIX, used by Willow installer -->
-		<IsProductComponent>true</IsProductComponent>
+		<IsProductComponent>false</IsProductComponent>
 		<ExtensionInstallationRoot>Extensions</ExtensionInstallationRoot>
 		<ExtensionInstallationFolder>Clide</ExtensionInstallationFolder>
 
