Using AssemblyVersion X.Y.Z to avoid loading invalid Clide.Interface assemblies

--- a/src/Version.targets
+++ b/src/Version.targets
@@ -53,7 +53,7 @@ AssemblyVersion=$(AssemblyVersion)" />
 			<PackageVersion Condition="'$(GitSemVerDashLabel)' != ''">$(GitBaseVersionMajor).$(GitBaseVersionMinor).$(GitBaseVersionPatch)$(GitSemVerDashLabel).$(GitCommits)+$(SemVerMetadata)</PackageVersion>
 			<!-- If shipping stable, semver the package version -->
 			<PackageVersion Condition="'$(GitSemVerDashLabel)' == ''">$(GitSemVerMajor).$(GitSemVerMinor).$(GitSemVerPatch)+$(SemVerMetadata)</PackageVersion>
-			<AssemblyVersion>$(GitBaseVersionMajor).$(GitBaseVersionMinor).$(GitBaseVersionPatch)</AssemblyVersion>
+			<AssemblyVersion>$(GitSemVerMajor).$(GitSemVerMinor).$(GitSemVerPatch)</AssemblyVersion>
 			<FileVersion>$(GitSemVerMajor).$(GitSemVerMinor).$(GitSemVerPatch)</FileVersion>
 			<InformationalVersion>$(PackageVersion)</InformationalVersion>
 		</PropertyGroup>
