--- a/src/Clide.Vsix/Clide.Vsix.csproj
+++ b/src/Clide.Vsix/Clide.Vsix.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
     <TargetFrameworks>net461;net462</TargetFrameworks>
     <GenerateBindingRedirects>true</GenerateBindingRedirects>
+    <TargetVsixContainerName>Clide.vsix</TargetVsixContainerName>    
     <CI Condition="'$(CI)' == '' and '$(TF_BUILD)' == 'true'">true</CI>
     <CI Condition="'$(CI)' == '' and '$(APPVEYOR)' != ''">true</CI>
   </PropertyGroup>
@@ -9,10 +10,9 @@
     <None Include="source.extension.vsixmanifest" />
   </ItemGroup>
   <ItemGroup>
-	<PackageReference Include="Xamarin.VSSDK.BuildTools" Version="0.3.0-alpha.*" />
-	 
-	<!-- Always build with latest VSSDK in CI -->
-	<PackageReference Include="Microsoft.VSSDK.BuildTools" Version="15.1.192" Condition="'$(CI)' == 'true'" />
+    <PackageReference Include="Xamarin.VSSDK.BuildTools" Version="0.3.0-alpha.*" />
+    <!-- Always build with latest VSSDK in CI -->
+    <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="15.1.192" Condition="'$(CI)' == 'true'" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Clide\Clide.csproj" />
