--- a/src/Clide.Vsix/Clide.Vsix.csproj
+++ b/src/Clide.Vsix/Clide.Vsix.csproj
@@ -1,22 +1,46 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net461;net462</TargetFrameworks>
+    <IncludePack>true</IncludePack>
     <GenerateBindingRedirects>true</GenerateBindingRedirects>
-    <TargetVsixContainerName>Clide.vsix</TargetVsixContainerName>    
+    <TargetVsixContainerName>Clide.vsix</TargetVsixContainerName>
     <CI Condition="'$(CI)' == '' and '$(TF_BUILD)' == 'true'">true</CI>
     <CI Condition="'$(CI)' == '' and '$(APPVEYOR)' != ''">true</CI>
+
+    <PackageId>Clide</PackageId>
+    <Authors>kzu, Daniel Cazzulino</Authors>
+    <Owners>clariuslabs, kzu</Owners>
+    <Description>Clide</Description>
+    <Copyright>Copyright 2012 Clarius Labs</Copyright>
+    <InferPackageContents>false</InferPackageContents>
+    <PackOnBuild Condition="'$(Configuration)' == 'Release'">true</PackOnBuild>
   </PropertyGroup>
+
   <ItemGroup>
     <None Include="source.extension.vsixmanifest" />
+    <PackageFile Include="build\Clide.props" Kind="Build" />
   </ItemGroup>
+
   <ItemGroup>
     <PackageReference Include="Xamarin.VSSDK.BuildTools" Version="0.3.0-alpha.*" />
     <!-- Always build with latest VSSDK in CI -->
     <PackageReference Include="Microsoft.VSSDK.BuildTools" Version="15.1.192" Condition="'$(CI)' == 'true'" />
   </ItemGroup>
+
   <ItemGroup>
-    <ProjectReference Include="..\Clide\Clide.csproj" />
     <ProjectReference Include="..\Clide.Interfaces\Clide.Interfaces.csproj" />
-    <ProjectReference Include="..\Clide.Extensibility\Clide.Extensibility.csproj" />
+    <ProjectReference Include="..\Clide\Clide.csproj">
+      <Pack>false</Pack>
+    </ProjectReference>
+    <ProjectReference Include="..\Clide.Extensibility\Clide.Extensibility.csproj">
+      <Pack>false</Pack>
+    </ProjectReference>
   </ItemGroup>
+
+  <Target Name="AddPackageContents" BeforeTargets="GetPackageContents">
+    <ItemGroup>
+      <PackageFile Include="$(TargetVsixContainer)" Kind="Tools" />
+    </ItemGroup>
+  </Target>
+
 </Project>
