Add target to retrieve ClideVsix path to consume from a VSIX manifest

--- a/src/Clide.Vsix/Clide.Vsix.csproj
+++ b/src/Clide.Vsix/Clide.Vsix.csproj
@@ -18,7 +18,7 @@
 
   <ItemGroup>
     <None Include="source.extension.vsixmanifest" />
-    <PackageFile Include="build\Clide.props" Kind="Build" />
+    <PackageFile Include="build\*.*" Kind="Build" />
   </ItemGroup>
 
   <ItemGroup>
